@@ -41,82 +41,82 @@ public class HtmlEncoder
     static Map<Object, Object> i2e = new HashMap<Object, Object>();
 
     // html entity list
-    private static Object[][] entities =
+    private static final Object[][] entities =
     {
-        {"quot", new Integer( 34 )}, // " - double-quote
-        {"amp", new Integer( 38 )}, // & - ampersand
-        {"lt", new Integer( 60 )}, // < - less-than
-        {"gt", new Integer( 62 )}, // > - greater-than
-        {"nbsp", new Integer( 160 )}, // non-breaking space
-        {"copy", new Integer( 169 )}, // � - copyright
-        {"reg", new Integer( 174 )}, // � - registered trademark
-        {"Agrave", new Integer( 192 )}, // � - uppercase A, grave accent
-        {"Aacute", new Integer( 193 )}, // � - uppercase A, acute accent
-        {"Acirc", new Integer( 194 )}, // � - uppercase A, circumflex accent
-        {"Atilde", new Integer( 195 )}, // � - uppercase A, tilde
-        {"Auml", new Integer( 196 )}, // � - uppercase A, umlaut
-        {"Aring", new Integer( 197 )}, // � - uppercase A, ring
-        {"AElig", new Integer( 198 )}, // � - uppercase AE
-        {"Ccedil", new Integer( 199 )}, // � - uppercase C, cedilla
-        {"Egrave", new Integer( 200 )}, // � - uppercase E, grave accent
-        {"Eacute", new Integer( 201 )}, // � - uppercase E, acute accent
-        {"Ecirc", new Integer( 202 )}, // � - uppercase E, circumflex accent
-        {"Euml", new Integer( 203 )}, // � - uppercase E, umlaut
-        {"Igrave", new Integer( 204 )}, // � - uppercase I, grave accent
-        {"Iacute", new Integer( 205 )}, // � - uppercase I, acute accent
-        {"Icirc", new Integer( 206 )}, // � - uppercase I, circumflex accent
-        {"Iuml", new Integer( 207 )}, // � - uppercase I, umlaut
-        {"ETH", new Integer( 208 )}, // � - uppercase Eth, Icelandic
-        {"Ntilde", new Integer( 209 )}, // � - uppercase N, tilde
-        {"Ograve", new Integer( 210 )}, // � - uppercase O, grave accent
-        {"Oacute", new Integer( 211 )}, // � - uppercase O, acute accent
-        {"Ocirc", new Integer( 212 )}, // � - uppercase O, circumflex accent
-        {"Otilde", new Integer( 213 )}, // � - uppercase O, tilde
-        {"Ouml", new Integer( 214 )}, // � - uppercase O, umlaut
-        {"Oslash", new Integer( 216 )}, // � - uppercase O, slash
-        {"Ugrave", new Integer( 217 )}, // � - uppercase U, grave accent
-        {"Uacute", new Integer( 218 )}, // � - uppercase U, acute accent
-        {"Ucirc", new Integer( 219 )}, // � - uppercase U, circumflex accent
-        {"Uuml", new Integer( 220 )}, // � - uppercase U, umlaut
-        {"Yacute", new Integer( 221 )}, // � - uppercase Y, acute accent
-        {"THORN", new Integer( 222 )}, // � - uppercase THORN, Icelandic
-        {"szlig", new Integer( 223 )}, // � - lowercase sharps, German
-        {"agrave", new Integer( 224 )}, // � - lowercase a, grave accent
-        {"aacute", new Integer( 225 )}, // � - lowercase a, acute accent
-        {"acirc", new Integer( 226 )}, // � - lowercase a, circumflex accent
-        {"atilde", new Integer( 227 )}, // � - lowercase a, tilde
-        {"auml", new Integer( 228 )}, // � - lowercase a, umlaut
-        {"aring", new Integer( 229 )}, // � - lowercase a, ring
-        {"aelig", new Integer( 230 )}, // � - lowercase ae
-        {"ccedil", new Integer( 231 )}, // � - lowercase c, cedilla
-        {"egrave", new Integer( 232 )}, // � - lowercase e, grave accent
-        {"eacute", new Integer( 233 )}, // � - lowercase e, acute accent
-        {"ecirc", new Integer( 234 )}, // � - lowercase e, circumflex accent
-        {"euml", new Integer( 235 )}, // � - lowercase e, umlaut
-        {"igrave", new Integer( 236 )}, // � - lowercase i, grave accent
-        {"iacute", new Integer( 237 )}, // � - lowercase i, acute accent
-        {"icirc", new Integer( 238 )}, // � - lowercase i, circumflex accent
-        {"iuml", new Integer( 239 )}, // � - lowercase i, umlaut
-        {"igrave", new Integer( 236 )}, // � - lowercase i, grave accent
-        {"iacute", new Integer( 237 )}, // � - lowercase i, acute accent
-        {"icirc", new Integer( 238 )}, // � - lowercase i, circumflex accent
-        {"iuml", new Integer( 239 )}, // � - lowercase i, umlaut
-        {"eth", new Integer( 240 )}, // � - lowercase eth, Icelandic
-        {"ntilde", new Integer( 241 )}, // � - lowercase n, tilde
-        {"ograve", new Integer( 242 )}, // � - lowercase o, grave accent
-        {"oacute", new Integer( 243 )}, // � - lowercase o, acute accent
-        {"ocirc", new Integer( 244 )}, // � - lowercase o, circumflex accent
-        {"otilde", new Integer( 245 )}, // � - lowercase o, tilde
-        {"ouml", new Integer( 246 )}, // � - lowercase o, umlaut
-        {"oslash", new Integer( 248 )}, // � - lowercase o, slash
-        {"ugrave", new Integer( 249 )}, // � - lowercase u, grave accent
-        {"uacute", new Integer( 250 )}, // � - lowercase u, acute accent
-        {"ucirc", new Integer( 251 )}, // � - lowercase u, circumflex accent
-        {"uuml", new Integer( 252 )}, // � - lowercase u, umlaut
-        {"yacute", new Integer( 253 )}, // � - lowercase y, acute accent
-        {"thorn", new Integer( 254 )}, // � - lowercase thorn, Icelandic
-        {"yuml", new Integer( 255 )}, // � - lowercase y, umlaut
-        {"euro", new Integer( 8364 )},// Euro symbol
+        {"quot", Integer.valueOf(34)}, // " - double-quote
+        {"amp", Integer.valueOf(38)}, // & - ampersand
+        {"lt", Integer.valueOf(60)}, // < - less-than
+        {"gt", Integer.valueOf(62)}, // > - greater-than
+        {"nbsp", Integer.valueOf(160)}, // non-breaking space
+        {"copy", Integer.valueOf(169)}, // � - copyright
+        {"reg", Integer.valueOf(174)}, // � - registered trademark
+        {"Agrave", Integer.valueOf(192)}, // � - uppercase A, grave accent
+        {"Aacute", Integer.valueOf(193)}, // � - uppercase A, acute accent
+        {"Acirc", Integer.valueOf(194)}, // � - uppercase A, circumflex accent
+        {"Atilde", Integer.valueOf(195)}, // � - uppercase A, tilde
+        {"Auml", Integer.valueOf(196)}, // � - uppercase A, umlaut
+        {"Aring", Integer.valueOf(197)}, // � - uppercase A, ring
+        {"AElig", Integer.valueOf(198)}, // � - uppercase AE
+        {"Ccedil", Integer.valueOf(199)}, // � - uppercase C, cedilla
+        {"Egrave", Integer.valueOf(200)}, // � - uppercase E, grave accent
+        {"Eacute", Integer.valueOf(201)}, // � - uppercase E, acute accent
+        {"Ecirc", Integer.valueOf(202)}, // � - uppercase E, circumflex accent
+        {"Euml", Integer.valueOf(203)}, // � - uppercase E, umlaut
+        {"Igrave", Integer.valueOf(204)}, // � - uppercase I, grave accent
+        {"Iacute", Integer.valueOf(205)}, // � - uppercase I, acute accent
+        {"Icirc", Integer.valueOf(206)}, // � - uppercase I, circumflex accent
+        {"Iuml", Integer.valueOf(207)}, // � - uppercase I, umlaut
+        {"ETH", Integer.valueOf(208)}, // � - uppercase Eth, Icelandic
+        {"Ntilde", Integer.valueOf(209)}, // � - uppercase N, tilde
+        {"Ograve", Integer.valueOf(210)}, // � - uppercase O, grave accent
+        {"Oacute", Integer.valueOf(211)}, // � - uppercase O, acute accent
+        {"Ocirc", Integer.valueOf(212)}, // � - uppercase O, circumflex accent
+        {"Otilde", Integer.valueOf(213)}, // � - uppercase O, tilde
+        {"Ouml", Integer.valueOf(214)}, // � - uppercase O, umlaut
+        {"Oslash", Integer.valueOf(216)}, // � - uppercase O, slash
+        {"Ugrave", Integer.valueOf(217)}, // � - uppercase U, grave accent
+        {"Uacute", Integer.valueOf(218)}, // � - uppercase U, acute accent
+        {"Ucirc", Integer.valueOf(219)}, // � - uppercase U, circumflex accent
+        {"Uuml", Integer.valueOf(220)}, // � - uppercase U, umlaut
+        {"Yacute", Integer.valueOf(221)}, // � - uppercase Y, acute accent
+        {"THORN", Integer.valueOf(222)}, // � - uppercase THORN, Icelandic
+        {"szlig", Integer.valueOf(223)}, // � - lowercase sharps, German
+        {"agrave", Integer.valueOf(224)}, // � - lowercase a, grave accent
+        {"aacute", Integer.valueOf(225)}, // � - lowercase a, acute accent
+        {"acirc", Integer.valueOf(226)}, // � - lowercase a, circumflex accent
+        {"atilde", Integer.valueOf(227)}, // � - lowercase a, tilde
+        {"auml", Integer.valueOf(228)}, // � - lowercase a, umlaut
+        {"aring", Integer.valueOf(229)}, // � - lowercase a, ring
+        {"aelig", Integer.valueOf(230)}, // � - lowercase ae
+        {"ccedil", Integer.valueOf(231)}, // � - lowercase c, cedilla
+        {"egrave", Integer.valueOf(232)}, // � - lowercase e, grave accent
+        {"eacute", Integer.valueOf(233)}, // � - lowercase e, acute accent
+        {"ecirc", Integer.valueOf(234)}, // � - lowercase e, circumflex accent
+        {"euml", Integer.valueOf(235)}, // � - lowercase e, umlaut
+        {"igrave", Integer.valueOf(236)}, // � - lowercase i, grave accent
+        {"iacute", Integer.valueOf(237)}, // � - lowercase i, acute accent
+        {"icirc", Integer.valueOf(238)}, // � - lowercase i, circumflex accent
+        {"iuml", Integer.valueOf(239)}, // � - lowercase i, umlaut
+        {"igrave", Integer.valueOf(236)}, // � - lowercase i, grave accent
+        {"iacute", Integer.valueOf(237)}, // � - lowercase i, acute accent
+        {"icirc", Integer.valueOf(238)}, // � - lowercase i, circumflex accent
+        {"iuml", Integer.valueOf(239)}, // � - lowercase i, umlaut
+        {"eth", Integer.valueOf(240)}, // � - lowercase eth, Icelandic
+        {"ntilde", Integer.valueOf(241)}, // � - lowercase n, tilde
+        {"ograve", Integer.valueOf(242)}, // � - lowercase o, grave accent
+        {"oacute", Integer.valueOf(243)}, // � - lowercase o, acute accent
+        {"ocirc", Integer.valueOf(244)}, // � - lowercase o, circumflex accent
+        {"otilde", Integer.valueOf(245)}, // � - lowercase o, tilde
+        {"ouml", Integer.valueOf(246)}, // � - lowercase o, umlaut
+        {"oslash", Integer.valueOf(248)}, // � - lowercase o, slash
+        {"ugrave", Integer.valueOf(249)}, // � - lowercase u, grave accent
+        {"uacute", Integer.valueOf(250)}, // � - lowercase u, acute accent
+        {"ucirc", Integer.valueOf(251)}, // � - lowercase u, circumflex accent
+        {"uuml", Integer.valueOf(252)}, // � - lowercase u, umlaut
+        {"yacute", Integer.valueOf(253)}, // � - lowercase y, acute accent
+        {"thorn", Integer.valueOf(254)}, // � - lowercase thorn, Icelandic
+        {"yuml", Integer.valueOf(255)}, // � - lowercase y, umlaut
+        {"euro", Integer.valueOf(8364)},// Euro symbol
     };
     
     
@@ -147,7 +147,7 @@ public class HtmlEncoder
         {
             char ch = s1.charAt( i );
 
-            String entity = (String) i2e.get( new Integer( ch ) );
+            String entity = (String) i2e.get(Integer.valueOf(ch));
             
             if ( entity == null )
             {
@@ -199,7 +199,7 @@ public class HtmlEncoder
                 Integer iso;
                 if ( entity.charAt( 0 ) == '#' )
                 {
-                    iso = new Integer( entity.substring( 1 ) );
+                    iso = Integer.valueOf(entity.substring(1));
                 }
                 else
                 {
